--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,10 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
+
+    {% include browser-upgrade.html %}
+    {% include masthead.html %}
+
     </header>
 
     <main id="content" class="main-content" role="main">
