--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -239,6 +239,10 @@ blockquote {
   max-height: 50px;
 }
 
+.main-icon {
+  max-height: 70px;
+}
+
 *:lang(ko) {
   .lead,
   .lead-mktg ,
@@ -250,3 +254,62 @@ blockquote {
 .form-select {
   -webkit-appearance: none;
 }
+
+
+/*
+   Table of contents navigation
+   ========================================================================== */
+   .toc {
+    font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto",
+      "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+    color: #7a8288;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    background-color: #fff;
+    border: 1px solid #f2f3f3;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
+  }
+  .toc .nav__title {
+    color: #fff;
+    font-size: 0.75em;
+    background: #7a8288;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+  }
+  
+  .toc__menu {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    list-style: none;
+    font-size: 0.8rem;
+  }
+  .toc__menu a {
+    display: block;
+    padding: 0.5rem 1rem;
+    color: #7a8288;
+    font-size: 0.6875em;
+    font-weight: bold;
+    line-height: 1.5;
+    border-bottom: 1px solid #f2f3f3;
+  }
+  .toc__menu a:hover {
+    color: #000;
+    background: #f2f3f3;
+  }
+  .toc__menu > li:last-child a {
+    border-bottom: none;
+  }
+  .toc__menu li ul > li a {
+    padding-left: 2rem;
+    font-weight: normal;
+  }
+  .toc__menu li > ul li {
+    display: none;
+  }
+  @media (min-width: 48em) {
+    .toc__menu li > ul li {
+      display: block;
+    }
+  }
