Remove breaking changes

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -258,7 +258,7 @@ blockquote {
 
 /*
    Table of contents navigation
-   ========================================================================== */
+   ========================================================================== 
    .toc {
     font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto",
       "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
@@ -312,4 +312,4 @@ blockquote {
     .toc__menu li > ul li {
       display: block;
     }
-  }
+  }*/
