--- a/assets/css/toc.scss
+++ b/assets/css/toc.scss
@@ -47,7 +47,8 @@
 
 /*
    Table of contents navigation
-   ========================================================================== */
+   ========================================================================== 
+   
 
    .toc {
     font-family: $sans-serif-narrow;
@@ -110,3 +111,4 @@
       }
     }
   }
+  */
