--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
       <ul class="main-links d-flex flex-wrap flex-items-stretch flex-justify-center border-left border-bottom border-sm-0 list-style-none">
         <li class="d-inline-block border-right">
           <a class="d-block p-4" href="https://github.com/jacquetc/skribisto">
-            {{ t.nav.about }}
+            GitHub
           </a>
         </li>
         <li class="d-inline-block border-right">
